--- a/02-dz0/01-semantic-mockup/solution.html
+++ b/02-dz0/01-semantic-mockup/solution.html
@@ -1,4 +1,72 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <!-- Ваше решение -->
+
+<head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Тестовая страница</title>
+</head>
+
+<body>
+    <header>
+        <h1>Header</h1>
+    </header>
+
+    <nav>
+        <ul>
+            <li>
+                <a href="#">
+                    Navigation 1
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    Navigation 2
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    Navigation 3
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+    <main>
+        <article>
+
+            <h2>Article 1</h2>
+
+            <ul>
+                <li>Оригинальная трилогия</li>
+                <li>Трилогия приквелов</li>
+                <li>Трилогия сиквелов</li>
+            </ul>
+
+        </article>
+
+        <article>
+
+            <h2>Article 2</h2>
+
+            <ol>
+                <li>Эпизод IV — Новая надежда</li>
+                <li>Эпизод V — Империя наносит ответный удар</li>
+                <li>Эпизод VI — Возвращение джедая</li>
+            </ol>
+
+        </article>
+
+    </main>
+
+
+    <footer>
+        <h2>Footer</h2>
+    </footer>
+</body>
+
 </html>
